[package]
name = "chess-tui"
version = "2.0.0"
authors = ["Thomas Mauran"]
license = "MIT"
edition = "2021"
description = "Play chess from your terminal 🦀"
keywords = ["chess", "tui", "graphics", "game", "board"]
homepage = "https://github.com/thomas-mauran/chess-tui"
repository = "https://github.com/thomas-mauran/chess-tui"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
dirs = "5.0.1"
ratatui = { version = "0.28.1", features = ["serde"] }
ruci = { version = "2.1.0", features = ["engine-sync"] }
toml = "0.5.8"
log = "0.4.25"
simplelog = "0.12.2"
chrono = "0.4.39"
shakmaty = "0.27.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
rodio = "0.18"

[dev-dependencies]
tempfile = "3.8"

[features]
chess-tui = []
default = ["chess-tui"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
