[package]
name = "chess-tui"
version = "2.3.0"
authors = ["Thomas Mauran"]
license = "MIT"
edition = "2021"
description = "Play chess from your terminal 🦀"
keywords = ["chess", "tui", "graphics", "game", "board"]
homepage = "https://github.com/thomas-mauran/chess-tui"
repository = "https://github.com/thomas-mauran/chess-tui"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
dirs = "5.0.1"
ratatui = { version = "0.29.0", features = ["serde"] }
ruci = { version = "2.1.0", features = ["engine-sync"] }
toml = "0.5.8"
log = "0.4.25"
simplelog = "0.12.2"
chrono = "0.4.39"
shakmaty = "0.27.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
rodio = { version = "0.18", optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
chess-tui = []
sound = ["rodio"]
default = ["chess-tui", "sound"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[package.metadata.deb]
# Configuration for cargo-deb (alternative packaging method)
# Install with: cargo install cargo-deb
# Build with: cargo deb
maintainer = "Thomas Mauran <thomasmauran@yahoo.com>"
copyright = "2023-2025, Thomas Mauran"
license-file = ["LICENSE"]
extended-description = """\
Chess-tui is a simple chess game you can play from your terminal.
It supports:
- Local 2 players mode
- Online multiplayer
- Playing against any UCI compatible chess engine
- Lichess integration
- Custom skins
- And more!
"""
section = "games"
priority = "optional"
depends = "$auto"
